--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <body>
         <input id="numeroField1" type="number"/>
         <input id="numeroField2" type="number"/>
-        <button  id="btMostra">Mostrar números pares</button>
+        <button  id="btExercicio2">Exercicio 2</button><br />
+        <button  id="btExercicio3">Exercicio 3</button>
         <script src="script.js"></script>
     </body>
 </html>
