--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <body>
         <input id="numeroField1" type="number"/>
         <input id="numeroField2" type="number"/>
-        <button  id="btExercicio2">Exercicio 2</button><br />
-        <button  id="btExercicio3">Exercicio 3</button>
+        <button  id="btExercicio2">Exercicio 2</button><br /><br />
+        <hr>
+        <button  id="btExercicio3">Exercicio 3</button><br /><br />
+        <hr>
+        <input id="anosEstudo" type="number" />
+        <button id="btExercicio4">Exercicio 4</button>
+        <hr>
         <script src="script.js"></script>
     </body>
 </html>
