--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
         <title>Desafios JS</title>
     </head>
     <body>
+        <button id="btExercicio1">Exercicio 1</button>
+        <hr>
         <input id="numeroField1" type="number"/>
         <input id="numeroField2" type="number"/>
-        <button  id="btExercicio2">Exercicio 2</button><br /><br />
+        <button  id="btExercicio2">Exercicio 2</button><br />
         <hr>
-        <button  id="btExercicio3">Exercicio 3</button><br /><br />
+        <button  id="btExercicio3">Exercicio 3</button><br />
         <hr>
         <input id="anosEstudo" type="number" />
         <button id="btExercicio4">Exercicio 4</button>
+        <hr>
+        <button id="btExercicio5">Exercicio 5</button>
         <hr>
         <script src="script.js"></script>
     </body>
