Renomear os arquivos para ficarem no padrão

--- a/index_desafio_1.html
+++ b/index_desafio_1.html
@@ -16,6 +16,6 @@
         <hr>
         <button id="btExercicio5">Exercicio 5</button>
         <hr>
-        <script src="script.js"></script>
+        <script src="script_desafio_1.js"></script>
     </body>
 </html>
