--- a/index_desafio_1.html
+++ b/index_desafio_1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Desafios JS</title>
+        <title>Desafio Módulo 1 JS</title>
     </head>
     <body>
         <button id="btExercicio1">Exercicio 1</button>
