Exercicio 3 de 2 ok

--- a/index_desafio_2.html
+++ b/index_desafio_2.html
@@ -4,8 +4,14 @@
     </head>
     <body>
         <div id="divExercicio1">
-            <button id="btExec1">Exercicio 1</button>
+            <button id="btExec1">Exercicio 1/2</button>
             <hr>
+        </div>
+
+        <div id="exec3">
+            <button id="btExec2">Exercicio 3</button>
+            <hr>
+
         </div>
         <script src="script_desafio_2.jS"></script>
     </body>
