Exercicio 4 de 2 ok

--- a/index_desafio_2.html
+++ b/index_desafio_2.html
@@ -9,9 +9,13 @@
         </div>
 
         <div id="exec3">
-            <button id="btExec2">Exercicio 3</button>
+            <button id="btExec3">Exercicio 3</button>
             <hr>
-
+        </div>
+        
+        <div id="exec4">
+            <input type="text" id="textExec4" />
+            <button id="btExec4">Exercicio 4</button>
         </div>
         <script src="script_desafio_2.jS"></script>
     </body>
