Exercicio 2 de desafio 4 ok

--- a/index_desafio_3.html
+++ b/index_desafio_3.html
@@ -5,6 +5,12 @@
     <body>
         <input type="number" id="inputIdadeExec1" />
         <button id="butExec1">Exercicio 1</button>
+        <hr>
+        <input type="text" id="inputIdadeExec2" />
+        <button id="butExec2">Exercicio 2</button>
+        <ul id="listaRepos"></ul>
+
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="script_desafio_3.js"></script>
     </body>
 </html>
